style.css
/* ... */
#special-font{
    position: absolute;
            bottom: 20%;line-height: 55px;
            left: 18%;
}





.flex-column{
    flex-direction: column;
}
.justify-content-center{
    justify-content: center;
}

h1{
    font-size: 130px;
    letter-spacing: 17px;
    text-shadow: 0px 0px 20px #3E9FFF;
    margin: 20px 0px;

}

.text-glow{
    text-shadow: 0px 0px 20px #3E9FFF;
}

h2{
    font-size: 62px;
    letter-spacing: 4px;
    text-shadow: 0px 0px 20px #3E9FFF;
}

h3{
    font-size: 44px;
    letter-spacing: 4px;
    /* transform: none; */
    transform: scaleX(1.2);

}

.reg-heading{
    font-family: AmaticsReg;
    font-size: 46px;
    letter-spacing: 1.5px;
    transform: scaleX(1.2);
}
.process-list{
    color: #BADDEE;
    font-family: AmaticsReg;
    letter-spacing: 1.2px;
    list-style: none;
    margin-top: -240px;
    margin-left: 5%;
    margin-right: 5%;
    padding-left: 0px;
    font-size: 30px;
}

.process-list li{
      
    margin: 0px 24px;
    /* padding-left: 5px; */
    text-align: left;
    /* min-width: 11%; */
    
}

.service-list {
    font-family: WorkSans;
    color: #a4c2d1;
    list-style: none;
    font-size: 22px;
    padding: 0 70px;
}

.service-list ul{
    padding:30px;
}

text,.cls-1{
    font-family: AmaticsBold;
}

.service-list li{
    margin: 30px 0;
}

h4{
    font-size:28px ;
}

p{
    color: #BADDEE;
    margin-bottom: 10px;
    font-family: WorkSans;
    font-size: 19px;
    line-height: 28px;
    letter-spacing: 1.2px;
}

.col-6{
    width: 50%;
    padding: 5px 15px;
    margin: 5px;
}

.col-4{
    width: 33.333%;
    padding: 8px;
    margin: 5px;
}
.my-5{
    margin-top: 2rem;
    margin-bottom: 2rem;
}
.py-5{
    padding-top: 2rem;
    padding-bottom: 2rem;
}

.px-5{
    padding-left: 2rem;
    padding-right: 2rem;
}

.pb-5{
    padding-bottom: 2rem;
}

.mb-5{
    margin-bottom: 2rem;
}

.text-center{
    text-align: center;
}
.d-flex{
    display: flex;
}

.justify-content-center{
    justify-content: center;
}
.justify-content-evenly{
    justify-content: space-around;
}

.align-items-center{
    align-items: center;
}

body{
    background: black;
    overflow-x: hidden;
}

.w-100{
    width: 100%;
}
.w-105{
    width: 100%;
    /* margin-left: -4%; */
}

@font-face {
    font-family: AmaticsBold;
    font-weight: bolder;
    src: url('./fonts/AmaticSC-Bold.ttf');
  }

  @font-face {
    font-family: AmaticsReg;
    src: url('./fonts/AmaticSC-Regular.ttf');
  }

  @font-face {
    font-family: WorkSans;
    src: url('./fonts/WorkSans-Regular.ttf');
  }
/* 
  @font-face {
    font-family: MyridPro;
    src: url('./fonts/MyriadPro-Regular.otf');
  } */

  .kodeglobe-logo{
      height: 50px;
  }
  ul{
      margin-left: 0;
      padding-left: 0px;
  }

  .client-list{
    color: #BADDEE;
    font-family: AmaticsBold;
    letter-spacing: 3.5px;
    list-style: none;
    transform: scaleX(1.2);
    font-size: 30px;
  }

  .client-list li{
      
      /* margin: 0px 58px; */
      margin: 10px 0;
      /* transform: scaleX(1.3); */
  }
  #glow-border-1{
      background-image: src('./imgs/IMG_0997.png');
  }

  .container{
    margin: auto;
  }

  @media (max-width:992px) and (min-width:768px){
      
    .container{
max-width: 750px;
    }
  }

  @media (max-width:1330px) and (min-width:901px){
    .process-list li{
        font-size: 24px;
    }
    h2{
        font-size: 56px;
    }
    .small-svg{
        transform: scale(0.60)!important;
    }
  }

  @media (max-width:1200px) and (min-width:992px){
    .container{
max-width: 970px;
    }
  }

  @media (min-width:1200px){
    .container{
max-width: 1170px;
    }
  }

  #client-logo-container  img{
    max-width: 250px;
  }

  #have-a-look-heading{
    margin-top: 134px;
  }

  @media  (max-width:900px)  {

    /* html{
        overflow-x: hidden;
    } */

    .px-5{
        padding-left: 1rem;
        padding-right: 1rem;
    }

    h1{
        font-size: 100px;
        letter-spacing: 16px;
    }
p{
    font-size: 17px;
    line-height: 27px;
    letter-spacing: 0.2px;
}
#have-a-look-heading{
    margin-top: 107px;
    margin-bottom: 17%;
    /* WIDTH: 70%; */
    text-align: center;
    padding: 0 173px;
}
.process-list li{
    margin: 0 15px;
    /* padding-left: 5px; */
    text-align: left;
    /* width: 50%; */
    font-size: 18px;
    min-width: auto;
}
.process-list{
    margin-left: 15px;
    margin-right: 15px;
}
h2{
    font-size: 32px;
}
.reg-heading{
    font-size: 32px;
}
.service-list{
    margin-top: -20%;
    font-size: 18px;
}
#client-logo-container > .my-5, .py-5{
    padding: 0;
    margin: 0%;
}

#client-logo-container  img{
    max-width: 190px;
}

  }
  #portrait-container{
    display: none;
}

@media (max-width:550px) and (orientation:portrait ){
    #portrait-container{
        display: flex;
      } 
      body,html{
          overflow: hidden;
      }
  }

  #portrait-container{
    height: 100%;
    position: fixed;
    text-align: center;
    z-index: 200;
    /* display: flex; */
    width: 100%;
    justify-content: center;
    align-items: center;
    /* padding-top: 50%; */
    background: black;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    top:0px;
    
}



#portrait-container img{
    width: 123px;
    text-align: center;
    /* transform: rotateZ(-70deg); */
    /* margin-left: -57px; */
    margin-top: -100px;
   transform-origin: center;
    animation-name: rotate;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-direction: alternate-reverse;
    transform: rotate(-90deg);
    animation-timing-function: cubic-bezier(0, 0, 0, 1.19);
    /* transform-origin: right; */
}


#portrait-container p{
    text-align: center;
    /* margin-left: -42px; */
    width: 100%;
    /* position: an; */
    /* position: absolute; */
    /* left: 32%; */
}

 @keyframes rotate {
    from 
    {transform: rotateZ(-5deg);}
    to {transform: rotateZ(-88deg);}
} 
/* ... */

